# MLPonFPGA_Summer2026

./: Multiplier module  README.md
pico_to_fpga/: CMakeLists.txt  pico_sdk_import.cmake
pico_to_fpga/host/: send_image.py
pico_to_fpga/source/: bus_clock.c  bus_clock.h  form_packet.c  form_packet.h  handshake.c  handshake.h  hardware_config.h  main(1).c  main.c  send_packet.c  send_packet.h  usb_image.c  usb_image.h  weights.c  weights.h
pico_to_fpga/src/: main.c  parallel_bus.c  parallel_bus.h  parallel_bus_config.h
source/: controllertop.sv  spi.sv  top(witheverything).sv  top.sv
source/Maincontroller/: ARGMAXfsm.sv  (+16 more)
testbench/: MACModule_tb.sv  MAC_controller_tb.sv  Maincontroller_tb.sv  SPI_fsm_tb.sv  SPI_module_tb.sv  SPI_shiftreg_tb.sv  SPImodule_tb.sv  accreg_tb.sv  addersigned16bit_tb.sv  argmax_controller_tb.sv  argmax_tb.sv  controllertop_tb.sv  hidden_layer_buffer_tb.sv  input_controller_tb.sv  inputcontroller_tb.sv  layer_controller_tb.sv  mainctrlfsm_tb.sv  mixedsign4bitmult_tb.sv  output_layer_buffer_tb.sv  relu_tb.sv  top_tb.sv
testbenches(archive)/: tb_MAC_controller.sv  tb_SPI_FSM.sv  tb_SPI_mod.sv  tb_SPI_shiftreg.sv  tb_addersigned16bit.sv  tb_argmax_controller.sv  tb_hidden_layer_buffer.sv  tb_main_ctrlfsm.sv  tb_output_layer_buffer.sv  tb_ssdec.sv  tb_top.sv
testbenches(uptodate)/: REPORT.md  run_verification.sh  tb_accreg.sv  tb_controllertop.sv  tb_hidden_layer_buffer.sv  tb_input_controller.sv  tb_layer_controller.sv  tb_output_layer_buffer.sv  tb_relu.sv
testbenches(uptodate2)/: tb_MAC.sv  tb_argmax.sv  tb_controllertop.sv  tb_dualffsync.sv  tb_input_controller.sv  tb_mixedsign4bitmult.sv
vision_model_ver2.0/: inspect_model.py  integer_inference.py  predict.py  preprocess.py  qatuning.py  quantize.py  send_image.py  train.py
(+34 files in other folders)
